<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:padding="24dp">

    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="@string/gameFinished"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/alertDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/raleway"
        android:text="@string/oneWin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/yes"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_shape"
        android:text="@string/yes"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertDesc" />

    <Button
        android:id="@+id/no"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:text="@string/no"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/yes"
        app:layout_constraintTop_toBottomOf="@+id/alertDesc" />
</android.support.constraint.ConstraintLayout>